# FliterSC

./: .gitignore  .travis.yml  Example.hs  FliterSC.cabal  Fuel.hs  README.md  RocketFuel.hs  Supercompiler.lhs  Tests.hs  index.html  params.json
Benchmarks/: Fib.hs  PermSort.hs  Queens.hs  depth4.hss
Debug/: RocketFuel.hs
Fliter/: EDSL.lhs  FixSet.lhs  Miniplate.lhs  Parser.hs  Pretty.lhs  Semantics.lhs  Syntax.lhs
SC/: Matching.lhs  Rebuild.lhs  Split.lhs  Termination.lhs
